# graphtype

./: LICENSE  README  graphtype.cabal
example/: Test01.hs  Test02.hs  test.sh
src/: GraphType.hs  OptionParser.hs  Parse.hs  test.sh
