Name:                graphtype
Version:             0.1
Synopsis:            A simple tool to illustrate dependencies between Haskell types
Description:         This tools produces diagrams of Haskell type interdependencies in the given source.
                     Actual drawing is done by graphviz tools (dot).
Category:            Text
License:             BSD3
License-file:        LICENSE
Author:              Dmitry Astapov
Maintainer:          Dmity Astapov <dastapov@gmail.com>
Build-Depends:       base >=3 && <5 , dotgen >= 0.4 , haskell-src-exts, uniplate
Stability:	     alpha
build-type: 	     Simple

-- Trivial (build) test framework
Executable:          graphtype
hs-source-dirs:	     src
Main-is:             GraphType.hs


